90% - JAX-RS: fazendo requisições POST para nossos controllers

--- a/TreinaWebJersey/WebContent/index.html
+++ b/TreinaWebJersey/WebContent/index.html
@@ -8,6 +8,8 @@
 <body>
 	<h2>Lista de tipos de produto</h2>
 	<br />
+	<a href="novoTipoProduto.html">Cadastrar novo tipo de produto</a>
+	<br />
 	<table id="tblTiposProdutos">
 		<thead>
 			<tr>
